force-app/main/default/objects/numm__PaymentPeriod__c/numm__PaymentPeriod__c.object-meta.xml
<CustomObject>
    <description>Objet des délais de paiement</description>
    <label>Délai de paiement</label>
    <nameField>
        <label>Délai de paiement</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Délais de paiement</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>