force-app/main/default/objects/numm__PaymentPeriod__c/fields/numm__ExtPaymentPeriodCode__c.field-meta.xml
<CustomField>
    <fullName>numm__ExtPaymentPeriodCode__c</fullName>
    <description>Code délai de paiement externe</description>
    <externalId>true</externalId>
    <inlineHelpText>Saisir un code de délai de paiement externe qui peut contenir jusqu&#39;à 10 caractères</inlineHelpText>
    <label>Code Délai Externe</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>