force-app/main/default/objects/numm__PaymentPeriod__c/fields/numm__FinDe__c.field-meta.xml
<CustomField>
    <fullName>numm__FinDe__c</fullName>
    <inlineHelpText>Indiquer si besoin, si c&#39;est en Fin de Mois, Fin de Décade.</inlineHelpText>
    <label>Fin De</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Décade</fullName>
            </value>
            <value>
                <fullName>Mois</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>