force-app/main/default/objects/numm__PaymentPeriod__c/fields/numm__Numberofdays__c.field-meta.xml
<CustomField>
    <fullName>numm__Numberofdays__c</fullName>
    <description>Nombre de jours du délai</description>
    <inlineHelpText>Calcule le nombre jours de délai</inlineHelpText>
    <label>Nombre de jours</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>