force-app/main/default/objects/numm__PaymentPeriod__c/listViews/numm__Tout.listView-meta.xml
<ListView>
    <fullName>numm__Tout</fullName>
    <columns>NAME</columns>
    <columns>numm__Numberofdays__c</columns>
    <columns>numm__FinDe__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tout</label>
    <language>fr</language>
</ListView>